<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background"
    tools:context=".register.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/main_background">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="start">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/backbtn" />
        </LinearLayout>
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="57dp"
            android:layout_height="57dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:layout_marginTop="-15dp"
            android:contentDescription="brandlogo"
            app:srcCompat="@drawable/brandnotext" />
    </LinearLayout>
    <TextView
        android:id="@+id/mainloginTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registermaintxt"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:paddingLeft="30dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/submainlogintxt"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/registersubmaintxt"
        android:textColor="@color/submaintxt"
        android:textSize="18sp"
        android:paddingStart="30dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="40dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/regisusername"
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/examplename"
            android:textColorHint="@color/submaintxt"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regisusername" />

        <EditText
            android:id="@+id/regisemail"
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/example_mail"
            android:textColorHint="@color/submaintxt"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regisemail" />

        <EditText
            android:id="@+id/regisPassword"
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/re_enter_password"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regisPassword" />

        <EditText
            android:id="@+id/regisConfPassword"
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <CheckBox
            android:id="@+id/rememberme"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="6dp"
            android:text="@string/rememberme"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regisConfPassword" />

        <CheckBox
            android:id="@+id/CandP"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:text="@string/policy"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rememberme" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/regisButton"
            android:layout_width="330sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/brown"
            android:text="@string/sign_up"
            android:textColor="@color/main_background"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/submaintxt"
                tools:layout_editor_absoluteX="-75dp"
                tools:layout_editor_absoluteY="5dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginStart="-50dp"
                android:text="@string/sign_in"
                android:textColor="@color/brown"
                tools:layout_editor_absoluteX="290dp"
                tools:layout_editor_absoluteY="0dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>