<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".login.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/main_background">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="start">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/backbtn" />
        </LinearLayout>
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:layout_marginTop="-10dp"
            android:contentDescription="brandlogo"
            app:srcCompat="@drawable/logobotbrand" />
    </LinearLayout>
    <TextView
        android:id="@+id/mainloginTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginMaintxt"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:paddingLeft="30dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/submainlogintxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginsubmaintxt"
        android:textColor="@color/submaintxt"
        android:textSize="18sp"
        android:paddingStart="30dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:text="@string/rememberme"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0."
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/button"
            android:layout_width="330sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/brown"
            android:text="@string/sign_in"
            android:textColor="@color/main_background"
            android:layout_gravity="center"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="@string/don_t_have_an_account_yet"
                android:textColor="@color/submaintxt"
                tools:layout_editor_absoluteX="-75dp"
                tools:layout_editor_absoluteY="5dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginStart="-20dp"
                android:text="Create an account"
                android:textColor="@color/brown"
                tools:layout_editor_absoluteX="290dp"
                tools:layout_editor_absoluteY="0dp" />

        </LinearLayout>
    </LinearLayout>




</LinearLayout>