<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="190dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="4dp"
    android:elevation="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/Productimage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.065"
            tools:src="@drawable/gatsby_moving_rubber_spiky_edge_hair_wax" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/Productimage"
            android:textSize="14sp"
            android:textStyle="bold"
            android:maxLines="2"
            card_view:layout_constraintEnd_toEndOf="@+id/Productimage"
            card_view:layout_constraintStart_toStartOf="@+id/Productimage"
            card_view:layout_constraintTop_toBottomOf="@+id/Productimage"
            tools:text="@string/dummy_productname" />

        <TextView
            android:id="@+id/productSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="5"
            android:textSize="10sp"
            card_view:layout_constraintEnd_toEndOf="@+id/productName"
            card_view:layout_constraintStart_toStartOf="@+id/productName"
            card_view:layout_constraintTop_toBottomOf="@+id/productName"
            tools:text="@string/dummy_productsize" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_productprice"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintStart_toStartOf="@+id/productSize"
            card_view:layout_constraintTop_toBottomOf="@+id/productSize"
            card_view:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>